TestSuite/PascalABCTests/errors/err0293.pas
type
  T1 =  array [0..integer.MaxValue] of byte;

begin
  
end.